modif dans branch dev

--- a/apropos.html
+++ b/apropos.html
@@ -1,3 +1,4 @@
 <h1 align="center"> A PROPOS DE LA Formation</h1>
 <h3> les branches avec git</h3>
 mahdi hammami
+Les branches avec git (modif  dans branch dev)
